crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_085_VRC7_Super_Mario_Bros_14_Unl.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-085-VRC7/Super Mario Bros 14 (Unl) [!].nes
rom_sha256=54ed68cb77022353aa3f6714b8a3c2d201fd1ea63b418757e0301e16688722bf
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=a13d237619604165
checkpoint f900 fb_fnv1a64=0934fdc40bcd042c
checkpoint f1100 fb_fnv1a64=6cdf4b80a78985ac
