crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_086_Jaleco86_Urusei_Yatsura_Lum_no_Wedding_Bell_J_a1_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-086-Jaleco86/Urusei Yatsura - Lum no Wedding Bell (J) [a1].zip
rom_sha256=ebe0f34689cf08182b4c3234eeae0d81579bd524816f4604822c696ef64b579f
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=d541559aed077a7b
checkpoint f900 fb_fnv1a64=693e47ba556b524e
checkpoint f1100 fb_fnv1a64=693e47ba556b524e
