crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_086_JalecoJF13_Urusei_Yatsura_Lum_no_Wedding_Bell_J_a1.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-086-JalecoJF13/Urusei Yatsura - Lum no Wedding Bell (J) [a1].nes
rom_sha256=bc1b05ba4d8b7a1143aa6e5837b12fb971212a8931346ec6bec51d75d372148a
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=d541559aed077a7b
checkpoint f900 fb_fnv1a64=693e47ba556b524e
checkpoint f1100 fb_fnv1a64=693e47ba556b524e
